--- a/AndroidFinalProject/app/src/main/res/values/colors.xml
+++ b/AndroidFinalProject/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="main_color">#f12633</color>
+    <color name="my_grey">#eeeeee</color>
 </resources>
