--- a/AndroidFinalProject/app/src/main/res/values/colors.xml
+++ b/AndroidFinalProject/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="main_color">#f12633</color>
+    <color name="button_press">#f16770</color>
     <color name="my_grey">#eeeeee</color>
 </resources>
