Main Screen work, Add new Product work

--- a/AndroidFinalProject/app/src/main/res/layout/activity_main.xml
+++ b/AndroidFinalProject/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -29,6 +30,7 @@
         android:paddingRight="4dp"
         android:text="@string/publish_your_add"
         android:textSize="14sp"
+        android:onClick="addProduct"
         app:backgroundTint="@null"
         app:layout_constraintEnd_toStartOf="@+id/imageButton"
         app:layout_constraintTop_toTopOf="parent" />
@@ -41,11 +43,13 @@
         android:layout_marginEnd="16dp"
         android:background="@drawable/search_button"
         android:contentDescription="@string/search_button"
+        android:onClick="startSearchActivity"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_action_name" />
 
     <ListView
+        android:id="@+id/main_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="64dp"
