--- a/AndroidFinalProject/app/src/main/res/values/colors.xml
+++ b/AndroidFinalProject/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="main_color">#f12633</color>
     <color name="button_press">#f16770</color>
     <color name="my_grey">#eeeeee</color>
+    <color name="my_grey2">#e6e6e6</color>
+    <color name="my_grey3">#8e8e8e</color>
 </resources>
