--- a/AndroidFinalProject/app/src/main/res/layout/activity_search.xml
+++ b/AndroidFinalProject/app/src/main/res/layout/activity_search.xml
@@ -34,7 +34,7 @@
         app:layout_constraintTop_toBottomOf="@+id/pageLogo" />
 
     <Spinner
-        android:id="@+id/category_spinner"
+        android:id="@+id/search_page_category_spinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -63,7 +63,7 @@
         app:backgroundTint="@null"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/category_spinner" />
+        app:layout_constraintTop_toBottomOf="@+id/search_page_category_spinner" />
 
     <ListView
         android:id="@+id/search_page_search_result"
