--- a/AndroidFinalProject/app/src/main/res/layout/activity_main.xml
+++ b/AndroidFinalProject/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_width="wrap_content"
+        android:layout_width="68dp"
         android:layout_height="36dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
@@ -29,9 +29,9 @@
         android:paddingTop="2dp"
         android:paddingRight="4dp"
         android:text="@string/publish_your_add"
+        android:visibility="invisible"
         android:textSize="14sp"
         android:onClick="addProduct"
-        app:backgroundTint="@null"
         app:layout_constraintEnd_toStartOf="@+id/imageButton"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -54,6 +54,58 @@
         android:layout_height="match_parent"
         android:layout_marginTop="64dp"
         android:background="@color/my_grey"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/button" >
+
+    </ListView>
+
+    <View
+        android:id="@+id/progressBackground"
+        android:background="@color/black"
+        android:alpha="0.64"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+    </View>
+
+    <ProgressBar
+        android:id="@+id/progressIcon"
+        android:indeterminateTint="@color/main_color"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="120dp"
+        />
+
+    <TextView
+        android:id="@+id/progressHeading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/welcome"
+        android:textColor="@color/white"
+        android:textSize="36sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
+
+    <TextView
+        android:id="@+id/progressText"
+        android:text="Kasuwa is loading new items"
+        android:textSize="12sp"
+        android:textColor="@color/white"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/progressHeading"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
