--- a/AndroidFinalProject/app/src/main/res/layout/activity_show_product.xml
+++ b/AndroidFinalProject/app/src/main/res/layout/activity_show_product.xml
@@ -56,6 +56,7 @@
         android:layout_marginTop="16dp"
         android:text="@string/add_to_cart"
         android:background="@drawable/my_button"
+        android:onClick="saveCart"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/show_product_category" />
