--- a/AndroidFinalProject/app/src/main/res/layout/activity_retrieve_cart.xml
+++ b/AndroidFinalProject/app/src/main/res/layout/activity_retrieve_cart.xml
@@ -4,16 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SaveCartActivity">
+    tools:context=".RetrieveCartActivity">
 
     <ListView
-        android:id="@+id/cart_list"
+        android:id="@+id/myListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="64dp"
-        android:background="@color/my_grey"
-        app:layout_constraintTop_toBottomOf="@+id/button" >
-
-    </ListView>
+        android:padding="5dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
